[tool.poetry]
name = "lldp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
netmiko = "^4.2.0"
matplotlib = "^3.7.2"
networkx = "^3.1"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
